<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dip"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dip"
        android:text="@string/app_name"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:text="@string/copyright" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="64dip"
        android:layout_marginTop="16dip"
        android:layout_marginRight="64dip"
        android:text="@string/about_text" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgVGitHub"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dip"
        android:layout_marginTop="28dp"
        android:layout_marginRight="32dip"
        android:text="Back" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dip"
        android:text="@string/group" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="5dip"
        android:layout_marginRight="16dip"
        android:text="@string/sarah" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="5dip"
        android:layout_marginRight="16dip"
        android:text="@string/syafiq" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView8"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="5dip"
        android:layout_marginRight="16dip"
        android:text="@string/putera" />

    <ImageView
        android:id="@+id/imgVGitHub"
        android:layout_width="161dp"
        android:layout_height="96dp"
        android:layout_below="@id/textView9"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/github" />
</RelativeLayout>